--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"nodemon src/main.js "
+    "dev": "nodemon src/main.js "
   },
   "author": "Santiago G. Marquinez",
   "license": "MIT",
   "devDependencies": {
     "nodemon": "^3.1.0"
+  },
+  "dependencies": {
+    "express": "^4.18.3"
   }
 }
