--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/main.js "
+    "dev": "nodemon src/app.js "
   },
   "author": "Santiago G. Marquinez",
   "license": "MIT",
