--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "nodemon": "^3.1.0"
   },
   "dependencies": {
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "handlebars": "^4.7.8",
+    "socket.io": "^4.7.5"
   }
 }
