--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.3",
     "express-handlebars": "^7.1.2",
     "handlebars": "^4.7.8",
+    "mongoose": "^8.3.2",
     "socket.io": "^4.7.5"
   }
 }
