--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "express": "^4.18.3",
     "express-handlebars": "^7.1.2",
     "handlebars": "^4.7.8",
+    "i": "^0.3.7",
     "mongoose": "^8.3.2",
+    "mongoose-paginate-v2": "^1.8.0",
+    "npm": "^10.6.0",
     "socket.io": "^4.7.5"
   }
 }
