--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.3",
     "express-handlebars": "^7.1.2",
@@ -25,6 +26,7 @@
     "mongoose-paginate-v2": "^1.8.0",
     "npm": "^10.6.0",
     "passport": "^0.7.0",
+    "passport-github": "^1.1.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "socket.io": "^4.7.5"
