--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "npm": "^10.6.0",
     "passport": "^0.7.0",
     "passport-github": "^1.1.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "socket.io": "^4.7.5"
